--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>my-first-repo</my-first-repo></title>
 </head>
 <body>
-    
+    <h1>mama i can push git hub</h1>
+    <h2>we know hiw to [ush github</h2>
 </body>
 </html>
