--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my-first-repo</my-first-repo></title>
-</head>
+    <link rel="stylesheet" href="style.css">
 <body>
     <h1>mama i can push git hub</h1>
     <h2>we know hiw to [ush github</h2>
+    <p>more paragraph</p>
+    <p>i am coding coding</p>
 </body>
 </html>
